--- a/src/App.css
+++ b/src/App.css
@@ -407,31 +407,6 @@ nav a:hover {
 .back {
   left: 0;
 }
-.next-big {
-  left: 900px;
-}
-
-/* .back-next-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 255;
-  align-items: center;
-  overflow: hidden;
-  display: flex;
-  justify-content: space-between;
-}
-.back, .next {
-  opacity: 0;
-  width: 100px;
-  z-index: 255;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.3s;
-} */
 .photos {
   background-position: center;
   width: 100%;
@@ -909,6 +884,10 @@ footer {
   .back-color {
     transform: translateY(0);
   }
+  .big-photo-container {
+    position: relative;
+    width: 100%;
+  }
 }
 /* --------------------------------------------------------- width 900px  */
 @media screen and (max-width: 900px){
@@ -1161,9 +1140,12 @@ footer {
     width: 850px;
     height: 1131px;
   }
-  .icon-photo {
+  .icon-photo, .icon-photo-big{
     opacity: 1;
     background-color: rgba(255, 255, 255, 0);
+  }
+  .icon-photo i, .icon-photo-big i{
+    color: rgba(255, 255, 255, 0.5);
   }
   .icon-photo:last-child {
     left: 750px;
