--- a/src/App.css
+++ b/src/App.css
@@ -245,6 +245,9 @@ nav a:hover {
   line-height: 35px;
   padding: 20px 10px;
 }
+#about-us-kindergarten-gallery {
+  padding-top: 32px;
+}
 .h1-photo span {
   display: none;
 }
@@ -266,6 +269,7 @@ nav a:hover {
   position:relative;
 }
 #about-us-studio-gallery {
+  padding-top: 32px; 
   position: relative;
 }
 .show-big-photo {
@@ -284,7 +288,7 @@ nav a:hover {
 }
 .photo-box-gallery-horizontal {
   width: 100%;
-  margin-bottom:50px;
+  margin-bottom: 20px;
   position:relative;
   overflow: hidden;
 }
@@ -327,7 +331,8 @@ nav a:hover {
 }
 .photo-horizontal img {
   width: 100%;
-  transform: scale(1.05);
+  height: 100%;
+  /* transform: scale(1.05); */
   transition: 0.3s;
 }
 .photo-horizontal img:hover {
@@ -400,7 +405,7 @@ nav a:hover {
   transition: 0.3s;
 }
 .back-big, .next-big {
-  opacity: 0.2;
+  opacity: 0.3;
   padding: 0 30px;
 }
 .back, .next {
@@ -583,6 +588,14 @@ nav a:hover {
   transition: 0.5s;
   
 }
+.map-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.map-container img {
+  width: 100%;
+}
 .show-photo {
   margin: 5px 5px 5px 0;
   cursor: pointer;
@@ -673,6 +686,9 @@ nav a:hover {
 #map>div:last-child>div {
   height: auto !important;
 }
+.mailto {
+  padding: 10px;
+}
 .phones-container {
   display: flex;
   flex-direction: row;
@@ -685,7 +701,7 @@ nav a:hover {
 }
 .phone-icon img {
   padding-right: 20px;
-  height: 150px;
+  width: 100px;
 }
 .phones-contact a {
   text-decoration: none;
@@ -698,11 +714,17 @@ nav a:hover {
 .links-contact {
   flex-direction: row;
 }
-.links-contact a {
+.links-contact-mobile {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.links-contact a, .links-contact-mobile a {
   text-decoration: none;
   color: white;
 }
-.links-contact li {
+.links-contact li, .links-contact-mobile li {
   padding: 0;
   justify-content: space-between;
   margin-bottom: 40px;
@@ -711,26 +733,29 @@ nav a:hover {
   align-items: center;
   border-radius: 20px;
 }
-.links-contact li:nth-child(2) {
+.links-contact li:nth-child(2), .links-contact-mobile li:nth-child(3) {
   width: 300px;
   background-color: #f59692;
 }
-.links-contact li:nth-child(2) a {
+.links-contact li:nth-child(2) a, .links-contact-mobile li:nth-child(3) a {
   font-size: 30px;
 }
-.links-contact i {
+.links-contact i, .links-contact-mobile i {
   font-size: 80px;
   color: #f59692;
 }
-.links-contact i:hover {
+.links-contact i:hover, .links-contact-mobile i:hover {
   color: #db4d50;
 }
-.links-contact li:nth-child(2):hover {
+.links-contact li:nth-child(2):hover, .links-contact-mobile li:nth-child(3):hover {
   background-color: #db4d50;
 }
-#map footer {
-  position: relative;
-  top: 800px;
+.logo-mobile {
+  width: 50%;
+}
+.logo-mobile a {
+  display: flex;
+  justify-content: center;
 }
 .full-screen {
   position: fixed;
@@ -772,6 +797,9 @@ nav a:hover {
 }
 footer {
   padding: 20px 0;
+}
+.footer-gallery {
+  padding-top: 0;
 }
 /* --------------------------------------------------------- width 1400px  */
 @media screen and (max-width: 1400px){
@@ -839,6 +867,7 @@ footer {
   .title {
     font-size: 28px;
     text-align: center;
+    padding: 20px;
   }
   .photo-studio .photo-box:nth-child(1) {
     display: none !important
@@ -1278,9 +1307,7 @@ footer {
   #map li {
     font-size: 35px;
   }
-  #map a {
-    padding: 10px;
-  }
+
 }
 /* --------------------------------------------------------- width 600px portrait  */
 @media screen and (max-width: 600px) and (orientation: portrait) {
@@ -1370,7 +1397,7 @@ footer {
   }
   .title {
     font-size: 28px;
-    padding: 52px;
+    padding: 20px;
   }
   .photo-box-gallery {
     width: 100vw;
@@ -1393,28 +1420,19 @@ footer {
   }
   #map ul {
     width: 360px;
-    flex-direction: column;
   }
   #map li {
     font-size: 20px;
     padding-bottom: 0;
   }
   .phone-icon {
-    flex: 2;
+    display: none;
   }
-  .phones-contact {
-    flex: 3;
-  }
-  .phone-icon img {
-    padding: 10px 10px 10px 0;
-    height: 80px;
-  }
-  .phones-contact {
-    align-items: flex-start !important;
+  .phones-contact li {
+    padding-bottom: 15px !important;
   }
   .phones-contact a {
     font-size: 28px;
-    padding-bottom: 15px;
   }
   .phones-container {
      margin-bottom: 20px;
@@ -1431,9 +1449,9 @@ footer {
     width: 120px;
     height: 60px;
   }
-  .title {
+  /* .title {
     padding-bottom: 30px;
-  }
+  } */
   .hamburger-container {
     top: 10px;
     right: 10px;
@@ -1455,7 +1473,14 @@ footer {
   }
   .title {
     font-size: 20px;
-    padding: 43px;
+    /* padding: 43px; */
+  }
+  .mail-mobile {
+    width: 90% !important;
+  }
+  .mailto {
+    font-size: 24px !important;
+    text-align: center;
   }
   .photo-box-gallery {
     width: 100vw;
