--- a/src/App.css
+++ b/src/App.css
@@ -689,10 +689,11 @@ nav a:hover {
 .mailto {
   padding: 10px;
 }
-.phones-container {
+/* .phones-container {
   display: flex;
   flex-direction: row;
-}
+  align-items: center;
+} */
 .phone-icon {
   flex: 1;
   display: flex;
@@ -703,13 +704,13 @@ nav a:hover {
   padding-right: 20px;
   width: 100px;
 }
+.phones-contact {
+  flex-direction: column;
+  text-align: center;
+}
 .phones-contact a {
   text-decoration: none;
   color: #db4d50;
-}
-.phones-contact {
-  flex-direction: column;
-  flex: 1;
 }
 .links-contact {
   flex-direction: row;
@@ -759,13 +760,34 @@ nav a:hover {
 .offer {
   min-width: 35%;
   height: 350px;
-  border: 5px solid #db4d50;
   background-color: #f59692;
   border-radius: 10px;
-  margin: 20px;
+  margin: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.offer a {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: 60px;
+  font-weight: bold;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.2);
+  opacity: 0.1;
+  transition: 0.5s;  
+}
+.offer a:hover {
+  opacity: 0.8;
+  color: white;
+  transform: scale(1.01);
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: 0.5s;
 }
 .offer h2 {
   color: white;
@@ -774,6 +796,11 @@ nav a:hover {
 .offer:hover {
   background-color: #f7b1af;
   cursor: pointer;
+}
+.family {
+  background-image: url('./images/studio2.jpg');
+  background-size: cover;
+
 }
 .logo-mobile {
   width: 50%;
