--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,6 @@ nav a:hover {
 }
 #about-us-studio p, #about-us-kindergarten p, #about-us-studio-offer p {
   font-size: 28px;
-  line-height: 35px;
   padding: 20px 10px;
 }
 #about-us-kindergarten-gallery {
@@ -765,6 +764,7 @@ nav a:hover {
   justify-content: center;
 }
 .offer {
+  font-family: 'Niramit', sans-serif;
   width: 24%;
   height: 300px;
   background-color: #f59692;
@@ -778,6 +778,7 @@ nav a:hover {
   background-position-y: center;
 }
 .offer a {
+  text-align: center;
   border-radius: 10px;
   width: 100%;
   height: 100%;
@@ -785,7 +786,7 @@ nav a:hover {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: bold;
   color: black;
   background-color: rgba(255, 255, 255, 0.2);
@@ -807,12 +808,18 @@ nav a:hover {
   background-color: #f7b1af;
   cursor: pointer;
 }
-.descriptionOffer {
+.descriptionOfferContainer {
   background-color: #d6dde0;
   border-radius: 10px;
   width: 97%;
   margin: 20px auto;
   display: flex;
+  justify-content: center; 
+}
+.descriptionOffer {
+  max-width: 1400px;
+  display: flex;
+  flex-direction: row;
 }
 .family {
   background-image: url('./images/family.jpg');
@@ -942,8 +949,7 @@ footer {
   }
   #about-us-studio p, #about-us-kindergarten p, #about-us-studio-offer p {
     margin: auto 10px;
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 26px;
     padding: 10px;
   }
 }
@@ -975,7 +981,6 @@ footer {
   #about-us-studio p, #about-us-kindergarten p, #about-us-studio-offer p {
     margin: auto 10px;
     font-size: 16px;
-    line-height: 16px;
     padding: 10px;
   }
   .title {
@@ -1077,7 +1082,7 @@ footer {
     height: 250px;
   }
   .offer a {
-    font-size: 40px;
+    font-size: 30px;
   }
 }
 /* --------------------------------------------------------- width 1000px  */
@@ -1189,11 +1194,17 @@ footer {
   }
   .offer a {
     opacity: 1;
-    font-size: 30px;
+    font-size: 16px;
     background-color: rgba(0, 0, 0, 0.5);
     height: 50px;
     border-radius: 0;
     color: white;
+  }
+  .textsAll {
+    padding: 10px;
+  }
+  .studioAll {
+    display: none;
   }
 }
 /* --------------------------------------------------------- width 600px  */
@@ -1332,7 +1343,6 @@ footer {
   #about-us-studio p, #about-us-kindergarten p, #about-us-studio-offer p {
     font-size: 16px;
     padding: 10px;
-    line-height: 20px;
   }
   .page-option {
     flex-direction: column;
@@ -1456,11 +1466,14 @@ footer {
   }
   .offer a {
     opacity: 1;
-    font-size: 40px;
+    font-size: 30px;
     background-color: rgba(0, 0, 0, 0.5);
     height: 60px;
     border-radius: 0;
     color: white;
+  }
+  .studioAll {
+    display: none;
   }
 }
 /* --------------------------------------------------------- width 600px portrait  */
@@ -1662,7 +1675,7 @@ footer {
     font-size: 20px;
   }
   .offer a {
-    font-size: 36px;
+    font-size: 26px;
   }
 }
 
