--- a/src/App.css
+++ b/src/App.css
@@ -232,13 +232,11 @@ nav a:hover {
   color: #ff7b7d;
 }
 #about-us-studio h2, #about-us-kindergarten h2 {
-  /* letter-spacing: 3px; */
   font-size: 28px;
   text-align: center;
   padding-bottom: 60px;
 }
 #about-us-studio h3, #about-us-kindergarten h3 {
-  /* letter-spacing: 4px; */
   font-size: 35px;
   text-align: center;
   padding-bottom: 40px;
@@ -334,7 +332,6 @@ nav a:hover {
 .photo-horizontal img {
   width: 100%;
   height: 100%;
-  /* transform: scale(1.05); */
   transition: 0.3s;
 }
 .photo-horizontal img:hover {
@@ -692,11 +689,6 @@ nav a:hover {
 .mailto {
   padding: 10px;
 }
-/* .phones-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-} */
 .phone-icon {
   flex: 1;
   display: flex;
@@ -777,6 +769,10 @@ nav a:hover {
   background-position-x: center;
   background-position-y: center;
 }
+.offer-kindergarten {
+  width: 600px;
+  height: 300px;
+}
 .offer a {
   text-align: center;
   border-radius: 10px;
@@ -845,8 +841,19 @@ nav a:hover {
 .communion {
   background-image: url('./images/communion.jpg');
 }
+.autumn {
+  background-image: url('./images/kindergarten_offer/autumn.jpg');
+}
+.spring {
+  background-image: url('./images/kindergarten_offer/spring.jpg');
+}
+.carnival {
+  background-image: url('./images/kindergarten_offer/carnival.jpg');
+}
+.tablo {
+  background-image: url('./images/kindergarten_offer/tablo.jpg');
+}
 .studioAll {
-  /* background-image: url('./images/studioAll1Big.jpg'); */
   flex: 2;
   padding: 50px;
 }
@@ -928,6 +935,9 @@ footer {
   #logo-home {
     width: 300px;
     height: 150px;
+  }
+  .offer a {
+    font-size: 30px;
   }
   .photo-box-gallery {
     width: 977px;
@@ -1082,7 +1092,7 @@ footer {
     height: 250px;
   }
   .offer a {
-    font-size: 30px;
+    font-size: 26px;
   }
 }
 /* --------------------------------------------------------- width 1000px  */
@@ -1616,9 +1626,6 @@ footer {
     width: 120px;
     height: 60px;
   }
-  /* .title {
-    padding-bottom: 30px;
-  } */
   .hamburger-container {
     top: 10px;
     right: 10px;
