--- a/src/App.css
+++ b/src/App.css
@@ -746,22 +746,28 @@ nav a:hover {
 .links-contact li:nth-child(2):hover, .links-contact-mobile li:nth-child(3):hover {
   background-color: #db4d50;
 }
-.offersContainer {
+#about-us-studio-offer, #about-us-kindergarten-offer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-.offerts {
+.offersContainer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 97%;
+}
+.offers:first-child {
+  margin-bottom: 5px;
 }
 .offer {
   font-family: 'Niramit', sans-serif;
   width: 24%;
   height: 300px;
+  margin: 0.15%;
   background-color: #f59692;
   border-radius: 10px;
-  margin: 0.2%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -770,10 +776,7 @@ nav a:hover {
   background-position-y: center;
 }
 .offer-kindergarten {
-  width: 33.3%;
-  height: 300px;
-  border-radius: 0;
-  margin: 0;
+  width: 33%;
 }
 .offer a {
   text-align: center;
@@ -790,9 +793,6 @@ nav a:hover {
   background-color: rgba(255, 255, 255, 0.2);
   opacity: 0;
   transition: 0.5s;  
-}
-.offer-kindergarten a {
-  border-radius: 0;
 }
 .offer a:hover {
   opacity: 0.8;
@@ -813,7 +813,7 @@ nav a:hover {
   background-color: #d6dde0;
   border-radius: 10px;
   width: 97%;
-  margin: 20px auto;
+  margin: 20px 0;
   display: flex;
   justify-content: center; 
   padding: 5px;
@@ -1486,7 +1486,7 @@ footer a {
   #map li {
     font-size: 35px;
   }
-  .offerts {
+  .offers {
     flex-direction: column;
   }
   .offer {
